[project]
name = "apache-beam-pipeline-apps"
version = "0.1.0"
description = ""
authors = [
    {name = "ywatanabe",email = "yu.w.tennis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-beam (>=2.69.0,<2.70.0)",
    "pydantic (>=2.12.4,<2.13.0)",
    "pandas (>=2.0,<3.0)"
]

[tool.poetry]
package-mode = true
packages = [
    { include = "apps", from = "python" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
